<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#6CC965" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/back_up" />

        <TextView
            android:id="@+id/tv_myinfo"
            style="@style/text_style1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/shoppingCar" />

        <ImageView
            style="@style/text_style2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_myinfo"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/iv_delete" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fl_shoppingCar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" >
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#EFF3FF"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_choseAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shoppingcar_choseall_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_choseAll"
            android:text="@string/choseAll" />

        <Button
            android:id="@+id/bnt_toSumMoney"
            style="@style/text_style1"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="#FFC726"
            android:text="@string/toSumMoney" />

        <TextView
            android:id="@+id/tv_shoppingcar_money"
            style="@style/text_style6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@id/bnt_toSumMoney"
            android:text="0.00" />
    </RelativeLayout>

</LinearLayout>